--- a/formats/indigenous_resurgence_maximalist_technological_anxiety_complete.html
+++ b/formats/indigenous_resurgence_maximalist_technological_anxiety_complete.html
@@ -175,99 +175,11 @@
 <header id="title-block-header">
 <h1 class="title">The River Spits Error Codes</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#chapter-1" id="toc-chapter-1">CHAPTER 1</a></li>
-<li><a href="#chapter-2" id="toc-chapter-2">CHAPTER 2</a></li>
-<li><a href="#chapter-3" id="toc-chapter-3">CHAPTER 3</a></li>
-<li><a href="#chapter-4" id="toc-chapter-4">Chapter 4</a>
-<ul>
-<li><a href="#chapter-4-1" id="toc-chapter-4-1">CHAPTER 4</a></li>
-</ul></li>
-<li><a href="#chapter-5" id="toc-chapter-5">Chapter 5</a>
-<ul>
-<li><a href="#chapter-5-1" id="toc-chapter-5-1">CHAPTER 5</a></li>
-</ul></li>
-<li><a href="#chapter-6" id="toc-chapter-6">Chapter 6</a>
-<ul>
-<li><a href="#chapter-6-1" id="toc-chapter-6-1">CHAPTER 6</a></li>
-</ul></li>
-<li><a href="#chapter-7" id="toc-chapter-7">Chapter 7</a>
-<ul>
-<li><a href="#chapter-7-1" id="toc-chapter-7-1">CHAPTER 7</a></li>
-</ul></li>
-<li><a href="#chapter-8" id="toc-chapter-8">Chapter 8</a>
-<ul>
-<li><a href="#chapter-8-1" id="toc-chapter-8-1">CHAPTER 8</a></li>
-</ul></li>
-<li><a href="#chapter-9" id="toc-chapter-9">Chapter 9</a>
-<ul>
-<li><a href="#chapter-9-1" id="toc-chapter-9-1">CHAPTER 9</a></li>
-</ul></li>
-<li><a href="#chapter-10" id="toc-chapter-10">Chapter 10</a>
-<ul>
-<li><a href="#chapter-10-1" id="toc-chapter-10-1">CHAPTER 10</a></li>
-</ul></li>
-<li><a href="#chapter-11" id="toc-chapter-11">Chapter 11</a>
-<ul>
-<li><a href="#chapter-11-1" id="toc-chapter-11-1">CHAPTER 11</a></li>
-</ul></li>
-<li><a href="#chapter-12" id="toc-chapter-12">Chapter 12</a>
-<ul>
-<li><a href="#final-chapter" id="toc-final-chapter">FINAL
-CHAPTER</a></li>
-</ul></li>
-<li><a href="#chapter-13" id="toc-chapter-13">Chapter 13</a>
-<ul>
-<li><a href="#chapter-13-1" id="toc-chapter-13-1">CHAPTER 13</a></li>
-</ul></li>
-<li><a href="#chapter-14" id="toc-chapter-14">Chapter 14</a>
-<ul>
-<li><a href="#chapter-14-1" id="toc-chapter-14-1">CHAPTER 14</a></li>
-</ul></li>
-<li><a href="#chapter-15" id="toc-chapter-15">Chapter 15</a>
-<ul>
-<li><a href="#chapter-15-1" id="toc-chapter-15-1">CHAPTER 15</a></li>
-</ul></li>
-<li><a href="#chapter-16" id="toc-chapter-16">Chapter 16</a>
-<ul>
-<li><a href="#chapter-16-1" id="toc-chapter-16-1">CHAPTER 16</a></li>
-</ul></li>
-<li><a href="#chapter-17" id="toc-chapter-17">Chapter 17</a>
-<ul>
-<li><a href="#chapter-17-1" id="toc-chapter-17-1">CHAPTER 17</a></li>
-</ul></li>
-<li><a href="#chapter-18" id="toc-chapter-18">Chapter 18</a>
-<ul>
-<li><a href="#chapter-18-1" id="toc-chapter-18-1">CHAPTER 18</a></li>
-</ul></li>
-<li><a href="#chapter-19" id="toc-chapter-19">Chapter 19</a>
-<ul>
-<li><a href="#chapter-19-1" id="toc-chapter-19-1">CHAPTER 19</a></li>
-</ul></li>
-<li><a href="#chapter-20" id="toc-chapter-20">Chapter 20</a>
-<ul>
-<li><a href="#chapter-20-1" id="toc-chapter-20-1">CHAPTER 20</a></li>
-</ul></li>
-<li><a href="#chapter-21" id="toc-chapter-21">Chapter 21</a>
-<ul>
-<li><a href="#chapter-21-1" id="toc-chapter-21-1">CHAPTER 21</a></li>
-</ul></li>
-<li><a href="#chapter-22" id="toc-chapter-22">Chapter 22</a>
-<ul>
-<li><a href="#chapter-22-1" id="toc-chapter-22-1">CHAPTER 22</a></li>
-</ul></li>
-<li><a href="#chapter-23" id="toc-chapter-23">Chapter 23</a>
-<ul>
-<li><a href="#chapter-23-1" id="toc-chapter-23-1">CHAPTER 23</a></li>
-</ul></li>
-<li><a href="#chapter-24" id="toc-chapter-24">Chapter 24</a>
-<ul>
-<li><a href="#chapter-24-1" id="toc-chapter-24-1">CHAPTER 24</a></li>
-</ul></li>
-</ul>
-</nav>
-<h2 id="chapter-1">CHAPTER 1</h2>
+<div style="text-align:center;margin-bottom:2em">
+<img src="cover.jpg" alt="Cover" style="max-width:400px"/>
+</div>
+<h1 id="chapter-1">Chapter 1</h1>
+<h2 id="chapter-1-1">CHAPTER 1</h2>
 <p>Kiona’s implant was a week behind on its translation patch, so the
 river’s data-stream wasn’t singing the old songs anymore—it was spitting
 error codes in a dead colonial syntax. The council’s new fiber-optic
@@ -493,7 +405,8 @@ home. And a new kind of listening to do.</p>
 <p>She touched the data-chip in her pouch. It was no longer just a piece
 of their world. It was a seed. Now they had to plant it in the belly of
 the beast, and see what strange, wild fruit would grow.</p>
-<h2 id="chapter-2">CHAPTER 2</h2>
+<h1 id="chapter-2">Chapter 2</h1>
+<h2 id="chapter-2-1">CHAPTER 2</h2>
 <p>The mint was for tea, but the smell of it, sharp and green, was for
 memory. Kiona’s grandmother held the dried leaves to her nose, eyes
 closed, and for a moment she wasn’t in the single-room cabin with its
@@ -696,7 +609,8 @@ seismic charge. As she followed her grandmother’s tracks down the
 darkening slope, the grinding drone still seemed to echo in her skull, a
 new and terrible rhythm. The land wasn’t just speaking.</p>
 <p>It was growling.</p>
-<h2 id="chapter-3">CHAPTER 3</h2>
+<h1 id="chapter-3">Chapter 3</h1>
+<h2 id="chapter-3-1">CHAPTER 3</h2>
 <p>Tom’s cabin smelled of solder and dread.</p>
 <p>The wired root—the Throat—sat in the center of the table like a pagan
 altar. Kiona’s smaller recorder played the stone-drone on a loop, its
